--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1854,6 +1854,102 @@
       display: block;
       border-top: 2px solid #f9f9f9;
   }
+  img#imageId {
+    width: 100%;
+    max-height: 400px;
+}
+.drag-img{
+    background: url(../images/drag.png);
+        background-repeat: no-repeat;
+    width: 72px;
+    height: 65px;
+  }
+  .drag-close{
+    position: absolute;
+    padding: 24px;
+    cursor: pointer;
+    top: 0;
+    right: 0;
+    display: inline-block;
+    z-index: 1;
+    opacity: 0.5;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    width: 12px;
+    height: 12px;
+    background: url(../images/close.png);
+    background-position: center;background-position: center;
+      background-repeat: no-repeat;
+  }
+.floating-container {
+    position: absolute;
+    z-index:12;
+    top: 17%;
+    right: 26px;
+    background-color: #fff;
+}
+.floating-container-b {
+    position: absolute;
+    z-index: 12;
+    right: 26px;
+    background-color: #fff;
+    top: -70px;
+}
+a.remov-right:before,
+a.remov-right-bottom:before {
+    content: url(../images/close.png);
+    padding: 8px;
+    height: 12px;
+    width: 47px;
+    background-repeat: no-repeat;
+}
+  .wrap-drag-drop {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,0.11), 0 8px 8px rgba(0,0,0,0.04);
+    -moz-box-shadow: 0 0 0 1px rgba(0,0,0,0.11),0 8px 8px rgba(0,0,0,0.04);
+    box-shadow: 0 0 0 1px rgba(0,0,0,0.11), 0 8px 8px rgba(0,0,0,0.04);
+    position: relative;
+    padding: 26px;
+    width: 330px;
+    overflow: auto;
+}
+
+#c{
+    position: absolute;
+    z-index: 1;
+    margin-top: -7%;
+    right: 24px;
+  }
+
+  .bulb-img-bubble {
+    position: relative;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    border: 0;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.04);
+    -moz-box-shadow: 0 0 0 1px rgba(0,0,0,0.08),0 2px 2px rgba(0,0,0,0.04);
+    box-shadow: 0 0 0 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.04);
+    background-color: white;
+    background-color: white;
+}
+  .bc_img {
+    margin: auto;
+    background-repeat: no-repeat;
+    background-image: url(https://a0.muscache.com/airbnb/static/list_your_space/tip-icon-73f3ef1d10a9545bfd15fd266803da48.png);
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    background-position: 14px 10px;
+}
+.slide:hover {
+    background: #edefed;
+}
+  .lang-drop span.caret {padding: 0;border: none;background: url(../images/arrow-icon.png) no-repeat;height: 9px; width: 18px;}
   @media (min-width: 768px) {
     .container {
       width: 750px;
@@ -3474,7 +3570,7 @@
     z-index: 123;
     padding-top: 21px;
     padding-right: 80px;
-    background: rgba(249, 249, 249, 0.2);
+    background: #fefefe;
 }
 
 .footer1 {
@@ -3570,6 +3666,8 @@
   .form-horizontal .form-group:after {
     clear: both;
   }
+
+
   #showspin{
        background: url(../images/rota.gif);
     width: 65px;
@@ -19713,7 +19811,7 @@
   .progress-bar {background-color: #00a699;border-radius: 0px 12px 12px 0px;}
   .progress{    border-radius: 0px;    height: 12px;}
   .va-middle {display: table-cell;vertical-align: middle;}
-  .center{text-align: center;}
+  .center{text-align: center;padding: 0 22px;}
 
 
   .help-panel-container .help-panel {
@@ -19833,10 +19931,24 @@
   margin-left: 16px;
   }
   a.remov-right {
-      border-right: 0px !important;
-      padding: 0px !important;
-      font-size: 17px;
-          float: right;
+    border-right: 0px !important;
+    padding: 0px !important;
+    font-size: 20px;
+    float: right;
+    line-height: 63px;
+    color: #00a699;
+  }
+  a.remov-right-bottom {
+    border-right: 0px !important;
+    padding: 0px !important;
+    font-size: 17px;
+    position: absolute;
+    right: 23px;
+    margin-top: 13%;
+    z-index: 1;
+}
+  .remove-padding .col-sm-8 {
+    margin-top: 10px;
   }
   span.right {
       float: right;
@@ -19949,6 +20061,8 @@
   .remove-padding{
       padding-left: 0px;
       padding: 12px 0px;
+      position: fixed;
+      bottom: 0px;
   }
   .step3-main .col-sm-8 {
     background: #fefefe;
@@ -20094,7 +20208,7 @@
       padding: 20px 32px;
   }
   .banner-right-sec{
-    margin-top: 160px;
+    margin-top: 100px;
   }
   .banner-right-sec1{
       margin-top: 25px;
@@ -20113,12 +20227,16 @@
     .step2-main .col-sm-8 , .step3-main .col-sm-8 {
       padding: 0px 26.67px;
     }
+    .step2-main .remove-padding .col-sm-8 {
+      padding-right: 7%;
+    }
     .right-with-video {
       margin: 160px 0px 150px 0px;
     }
   .step2-main .col-sm-8, .step3-main .col-sm-8 {
       width: 60.66667%;
   }
+
   .step3-main .col-sm-4 {
       width: 39.33333%;
       padding-right: 6%;
